# ai_bridge_v7_cleanroom

./: .gitignore  CHANGELOG_LAUNCH_PATCH.md  CHANGELOG_REBUILD.md  FILES_CREATED.md  README.md  pyproject.toml  railway.json  requirements.txt
ai_bridge_v7_cleanroom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py  add_ons.py  agents.py  api_keys.py  benchmark.py  billing.py  cli.py  config.py  costing.py  dashboard.py  db.py  main.py  models.py  payments.py  perks.py  pricing.py  routing.py  schemas.py  session_auth.py  tasks.py  terminal.py
app/providers/: base.py  mock.py  real.py
app/routes/: api.py  web.py
app/static/: install.sh  styles.css
app/templates/: acceptable_use.html  admin_dashboard.html  base.html  chat.html  dashboard.html  landing.html  payment_cancel.html  payment_success.html  privacy.html  terms.html
docs/: ARCHITECTURE_NOTES.md  DEPLOY_RAILWAY.md  SMOKE_TESTS.md
scripts/: install_aibridge.sh
tests/: test_app.py
